--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,15 +2,15 @@ include_directories(${INCDIRS})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 #rootcling refuses to generate most code if given a header not in the local directory
-configure_file(TH2Jagged.h ${CMAKE_CURRENT_BINARY_DIR}/TH2Jagged.h COPYONLY)
+configure_file(TH2Jagged_impl.h ${CMAKE_CURRENT_BINARY_DIR}/TH2Jagged_impl.h COPYONLY)
 configure_file(TH2JaggedLinkdef.h ${CMAKE_CURRENT_BINARY_DIR}/TH2JaggedLinkdef.h COPYONLY)
 
 add_custom_command(
   OUTPUT "TH2JaggedDict.cxx" "TH2JaggedDict_rdict.pcm" "TH2Jagged.rootmap"
   COMMAND rootcling
-  ARGS -f TH2JaggedDict.cxx -rmf TH2Jagged.rootmap TH2Jagged.h TH2JaggedLinkdef.h
+  ARGS -f TH2JaggedDict.cxx -rmf TH2Jagged.rootmap TH2Jagged_impl.h TH2JaggedLinkdef.h
   DEPENDS
-    ${CMAKE_CURRENT_BINARY_DIR}/TH2Jagged.h
+    ${CMAKE_CURRENT_BINARY_DIR}/TH2Jagged_impl.h
     ${CMAKE_CURRENT_BINARY_DIR}/TH2JaggedLinkdef.h)
 
 add_library(TH2Jagged SHARED
@@ -23,7 +23,7 @@ install(FILES
     ${CMAKE_CURRENT_BINARY_DIR}/TH2JaggedDict_rdict.pcm
     ${CMAKE_CURRENT_BINARY_DIR}/TH2Jagged.rootmap
   DESTINATION lib)
-install(FILES TH2Jagged.h DESTINATION include)
+install(FILES TH2Jagged.h TH2Jagged_impl.h DESTINATION include)
 
 if(NOT "${CMAKE_LINK_FLAGS} " STREQUAL " ")
   set_target_properties(TH2Jagged PROPERTIES LINK_FLAGS ${CMAKE_LINK_FLAGS})
