Tweaks to how LinkDef for up to date rootcling inconsistencies!

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,5 @@
-ROOT_GENERATE_DICTIONARY(TH2JaggedDict
-            ${CMAKE_CURRENT_SOURCE_DIR}/TH2Jagged.h
-            LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/TH2JaggedLinkDef.h
-            OPTIONS -p)
-
 add_library(TH2Jagged SHARED
   TH2Jagged.cxx
-  TH2JaggedDict.cxx
 )
 
 set_target_properties(TH2Jagged PROPERTIES 
@@ -14,12 +8,17 @@ set_target_properties(TH2Jagged PROPERTIES
 
 target_link_libraries(TH2Jagged ROOT::ROOT)
 
+ROOT_GENERATE_DICTIONARY(TH2Jagged_dict
+            ${CMAKE_CURRENT_SOURCE_DIR}/TH2Jagged.h
+            LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/TH2JaggedLinkDef.h
+            MODULE TH2Jagged)
+
 install(TARGETS TH2Jagged 
     EXPORT th2jagged-targets
     LIBRARY DESTINATION lib/
     PUBLIC_HEADER DESTINATION include/)
 
 install(FILES
-    ${CMAKE_CURRENT_BINARY_DIR}/libTH2JaggedDict_rdict.pcm
-    ${CMAKE_CURRENT_BINARY_DIR}/libTH2JaggedDict.rootmap
+    ${CMAKE_CURRENT_BINARY_DIR}/libTH2Jagged_rdict.pcm
+    ${CMAKE_CURRENT_BINARY_DIR}/libTH2Jagged.rootmap
     DESTINATION lib/)
