Reverts some 'tidy up' that occured with the new CMake that seems to make everything fail silently for downstream pacakges.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,18 @@ add_subdirectory(src)
 
 if(DEFINED DO_TEST AND NOT "${DO_TEST} " STREQUAL " ")
   add_compile_definitions(NDEBUG)
-  add_compile_options(-Wno-error=unused-but-set-variable -Wno-error=unused-variable)
+  add_compile_options(-Wno-error=unused-variable)
+  if(CMAKE_CXX_COMPILER_ID STREQUAL GNU)
+      add_compile_options(-Wno-error=unused-but-set-variable)
+  endif()
+
+  if(CMAKE_HOST_SYSTEM_NAME STREQUAL Darwin)
+    set(CMAKE_MACOSX_RPATH ON)
+    LIST(APPEND CMAKE_INSTALL_RPATH "@executable_path/../lib")
+  endif()
+
   add_subdirectory(test)
+
 endif()
 
 configure_file(cmake/setup.sh.in
