--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,9 +8,12 @@ set_target_properties(TH2Jagged PROPERTIES
 
 target_link_libraries(TH2Jagged ROOT::ROOT)
 
+configure_file(TH2Jagged.h ${CMAKE_CURRENT_BINARY_DIR}/TH2Jagged.h COPYONLY)
+configure_file(TH2JaggedLinkdef.h ${CMAKE_CURRENT_BINARY_DIR}/TH2JaggedLinkdef.h COPYONLY)
+
 ROOT_GENERATE_DICTIONARY(TH2Jagged_dict
-            ${CMAKE_CURRENT_SOURCE_DIR}/TH2Jagged.h
-            LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/TH2JaggedLinkDef.h
+            TH2Jagged.h
+            LINKDEF TH2JaggedLinkDef.h
             MODULE TH2Jagged)
 
 install(TARGETS TH2Jagged 
